Don't use an internal com.sun class
We've got our own Base64 encoder/decoder so lets use that instead
of the com.sun one (which emits the following warning:

[WARNING] BASE64Decoder is internal proprietary API and may be
removed in a future release

Change-Id: I9e8470bed9ef051b48b0cfcf7ba1ae0a7bcafb3b
Reviewed-on: http://review.couchbase.org/27758
Tested-by: Trond Norbye <trond.norbye@gmail.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>